--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -1203,10 +1203,17 @@
                     </div>
                     <button class="settings-btn" style="border-color: var(--danger); color: var(--danger);" onclick="clearAllData()">Удалить</button>
                 </div>
+                <div class="settings-item">
+                    <div>
+                        <div class="settings-label">Проверить обновления</div>
+                        <div class="settings-desc">Проверить наличие новой версии</div>
+                    </div>
+                    <button class="settings-btn" id="check-update-btn" onclick="checkForUpdates()">Проверить</button>
+                </div>
                 <div class="settings-item" style="border-bottom: none;">
                     <div>
                         <div class="settings-label">О приложении</div>
-                        <div class="settings-desc">CardVault v2.1 — Полностью офлайн</div>
+                        <div class="settings-desc" id="app-version-text">CardVault v2.3</div>
                     </div>
                 </div>
             </div>
@@ -1450,6 +1457,10 @@
         // ОСНОВНОЕ ПРИЛОЖЕНИЕ
         // ========================================
         
+        // Версия приложения для проверки обновлений
+        const APP_VERSION = '2.3';
+        const GITHUB_REPO = 'StWings/Cardvault';
+
         const DB_NAME = 'cardvault';
         const STORE_NAME = 'cards';
         let db;
@@ -2059,6 +2070,128 @@
                 closeScanner();
             }
         });
+
+        // ========================================
+        // ПРОВЕРКА ОБНОВЛЕНИЙ
+        // ========================================
+
+        // Сравнение версий (возвращает 1 если v1 > v2, -1 если v1 < v2, 0 если равны)
+        function compareVersions(v1, v2) {
+            const parts1 = v1.replace(/^v/, '').split('.').map(Number);
+            const parts2 = v2.replace(/^v/, '').split('.').map(Number);
+
+            for (let i = 0; i < Math.max(parts1.length, parts2.length); i++) {
+                const p1 = parts1[i] || 0;
+                const p2 = parts2[i] || 0;
+                if (p1 > p2) return 1;
+                if (p1 < p2) return -1;
+            }
+            return 0;
+        }
+
+        async function checkForUpdates() {
+            const btn = document.getElementById('check-update-btn');
+            const originalText = btn.textContent;
+
+            // Показываем состояние загрузки
+            btn.textContent = 'Проверка...';
+            btn.disabled = true;
+
+            try {
+                const response = await fetch(`https://api.github.com/repos/${GITHUB_REPO}/releases/latest`, {
+                    headers: {
+                        'Accept': 'application/vnd.github.v3+json'
+                    }
+                });
+
+                if (!response.ok) {
+                    throw new Error('Не удалось получить информацию о релизах');
+                }
+
+                const release = await response.json();
+                const latestVersion = release.tag_name.replace(/^v/, '');
+
+                if (compareVersions(latestVersion, APP_VERSION) > 0) {
+                    // Есть новая версия
+                    const downloadUrl = release.assets && release.assets.length > 0
+                        ? release.assets[0].browser_download_url
+                        : release.html_url;
+
+                    showUpdateAvailable(latestVersion, downloadUrl, release.html_url);
+                } else {
+                    // Версия актуальна
+                    showToast('У вас установлена последняя версия', 'success');
+                }
+            } catch (error) {
+                console.error('Ошибка проверки обновлений:', error);
+                showToast('Не удалось проверить обновления. Проверьте интернет.', 'error');
+            } finally {
+                btn.textContent = originalText;
+                btn.disabled = false;
+            }
+        }
+
+        function showUpdateAvailable(version, downloadUrl, releaseUrl) {
+            // Создаём модальное окно с информацией об обновлении
+            const existingModal = document.getElementById('update-modal');
+            if (existingModal) {
+                existingModal.remove();
+            }
+
+            const modal = document.createElement('div');
+            modal.className = 'modal-overlay active';
+            modal.id = 'update-modal';
+            modal.innerHTML = `
+                <div class="modal" style="max-width: 400px;">
+                    <div class="modal-header">
+                        <h3 class="modal-title">Доступно обновление!</h3>
+                        <button class="modal-close" onclick="closeUpdateModal()">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <line x1="18" y1="6" x2="6" y2="18"></line>
+                                <line x1="6" y1="6" x2="18" y2="18"></line>
+                            </svg>
+                        </button>
+                    </div>
+                    <div class="modal-body" style="text-align: center;">
+                        <div style="font-size: 48px; margin-bottom: 16px;">🎉</div>
+                        <p style="font-size: 16px; margin-bottom: 8px;">
+                            Новая версия: <strong>v${version}</strong>
+                        </p>
+                        <p style="color: var(--text-secondary); margin-bottom: 24px;">
+                            Текущая версия: v${APP_VERSION}
+                        </p>
+                        <a href="${downloadUrl}"
+                           target="_blank"
+                           class="btn-primary"
+                           style="display: block; text-decoration: none; margin-bottom: 12px;">
+                            Скачать обновление
+                        </a>
+                        <a href="${releaseUrl}"
+                           target="_blank"
+                           style="color: var(--text-secondary); font-size: 14px;">
+                            Посмотреть изменения
+                        </a>
+                    </div>
+                </div>
+            `;
+
+            document.body.appendChild(modal);
+
+            // Закрытие по клику на оверлей
+            modal.addEventListener('click', (e) => {
+                if (e.target === modal) {
+                    closeUpdateModal();
+                }
+            });
+        }
+
+        function closeUpdateModal() {
+            const modal = document.getElementById('update-modal');
+            if (modal) {
+                modal.classList.remove('active');
+                setTimeout(() => modal.remove(), 300);
+            }
+        }
 
         async function init() {
             // Загружаем тему до отрисовки UI
